src/App.css
.App {
  text-align: center;
}

#EnhancedTableBox {
  padding-top: 30px;
  width: 1250px;
  margin: auto;
}

#AspenLogo {
  margin: 10px;
}

#NavItems {
  position: relative;
  display: flex;
  margin-left: auto;
}

.NavButtons {
  margin-right: 100px;
}


@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

